--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "streamlit>=1.48.1",
     "ctransformers>=0.2.27",
+    "pypdf>=6.0.0",
+    "pandas>=2.3.1",
+    "streamlit-extras>=0.7.6",
 ]
