--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,13 @@ dependencies = [
     "faiss-cpu>=1.12.0",
     "bs4>=0.0.2",
     "rank-bm25>=0.2.2",
+    "pillow>=11.3.0",
+    "pydantic>=2.11.7",
+    "lxml>=6.0.0",
+    "matplotlib>=3.10.5",
+    "chromadb>=1.0.20",
+    "tiktoken>=0.11.0",
+    "unstructured[all-docs]>=0.18.13",
+    "iprogress>=0.4",
+    "open-clip-torch>=3.1.0",
 ]
