--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,4 +34,7 @@ dependencies = [
     "unstructured[all-docs]>=0.18.13",
     "iprogress>=0.4",
     "open-clip-torch>=3.1.0",
+    "datasets>=4.0.0",
+    "ipywidgets>=8.1.7",
+    "jupyter>=1.1.1",
 ]
