pyproject.toml 및 uv.lock 업데이트: pydantic 버전 제한 변경(<2.11) 및 FastAPI, Uvicorn, Langserve, SSE-Starlette, Wikipedia, Arxiv, Langgraph, Eval-Type-Backport 등 여러 패키지 추가. 의존성 관리 개선.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "bs4>=0.0.2",
     "rank-bm25>=0.2.2",
     "pillow>=11.3.0",
-    "pydantic>=2.11.7",
+    "pydantic<2.11",
     "lxml>=6.0.0",
     "matplotlib>=3.10.5",
     "chromadb>=1.0.20",
@@ -37,4 +37,11 @@ dependencies = [
     "datasets>=4.0.0",
     "ipywidgets>=8.1.7",
     "jupyter>=1.1.1",
+    "fastapi>=0.116.1",
+    "uvicorn>=0.35.0",
+    "langserve>=0.3.1",
+    "sse-starlette>=3.0.2",
+    "wikipedia>=1.4.0",
+    "arxiv>=2.2.0",
+    "langgraph>=0.6.6",
 ]
